# omapmaker

./: .gitignore  Cargo.toml  README.md  TODO.md  steps.md
app/src/: backend.rs  bin.rs  frontend.rs  omap_generator.rs  omap_maker.rs
app/src/assets/: epsg_list.rs  icon.raw
app/src/gui/: gui_variables.rs  main_panel.rs  map_controls.rs  map_plugins.rs  mod.rs  modals.rs  side_panel.rs  terminal_like.rs
gui/assets/: icon.data
gui/src/: bin.rs  error.rs  omap_generator.rs  omap_maker.rs
gui/src/gui/: gui_variables.rs  main_panel.rs  map_controls.rs  map_plugins.rs  mod.rs  modals.rs  omap_maker.rs  side_panel.rs  terminal_like.rs
laz2omap/src/: drawable_omap.rs  lib.rs  make_map.rs  map_params.rs  parameters.rs  params.rs  parser.rs  run_backend.rs  run_cli.rs  run_gui.rs
laz2omap/src/c2hm/: contour_triangulation.rs
laz2omap/src/comms/: messages.rs  mod.rs  omap_comms.rs
laz2omap/src/drawable/: drawable_object.rs  drawable_omap.rs  drawable_symbol.rs  mod.rs
laz2omap/src/drawing/: drawable_omap.rs  gui_variables.rs  mod.rs  terminal_like.rs
laz2omap/src/geometry/: contour_set.rs  line_string.rs  mod.rs  multi_polygon.rs  point_cloud.rs  point_lidar.rs
laz2omap/src/matrix/: matrix32x6.rs  matrix6x6.rs  mod.rs  vector32.rs  vector6.rs
laz2omap/src/project/: rectangles.rs
laz2omap/src/raster/: dfm.rs  mod.rs
laz2omap/src/steps/: compute_basemap.rs  compute_cliffs.rs  compute_contours.rs  compute_dfm.rs  compute_intensity.rs  compute_map_objects.rs  compute_vegetation.rs  convert_copc.rs  initialize_map_tile.rs  make_map.rs  map_laz.rs  mod.rs  parse_crs.rs  read_laz.rs  regenerate_map_tile.rs  retile_laz.rs  save_tiffs.rs
src/: backend.rs  bin.rs  consts.rs  convert_copc.rs  error.rs  frontend.rs  main.rs  neighbors.rs  parameters.rs  parse_crs.rs  parser.rs  statistics.rs
src/assets/: mod.rs
src/c2hm/: contour_hierarchy.rs  mod.rs
src/cdt/: cdt.rs  contour_hierarchy.rs  mod.rs
src/comms/: messages.rs  mod.rs  omap_comms.rs
src/dfm/: dfm.rs  mod.rs
src/drawable/: drawable_object.rs  drawable_omap.rs  drawable_symbol.rs
src/geometry/: bezier.rs  contour.rs  contour_set.rs  coord.rs  lidar_point.rs  line.rs  line_string.rs  mod.rs  multi_line_string.rs  multi_polygon.rs  point.rs  point2D.rs  point5D.rs  point_cloud.rs  point_cloud5D.rs  point_lidar.rs  polygon.rs  rectangle.rs  vertex.rs
src/gui/: gui_variables.rs  main_panel.rs  map_controls.rs  map_plugins.rs  mod.rs  modals.rs  side_panel.rs  terminal_like.rs
src/map/: area_object.rs  colors_and_symbols_omap.txt  line_object.rs  map_object.rs  mod.rs  omap.rs  point_object.rs  symbol.rs  tag.rs
src/map_gen/: compute_basemap.rs  compute_cliffs.rs  compute_contours.rs  compute_dfm.rs  compute_intensity.rs  compute_map_objects.rs  compute_vegetation.rs  make_map.rs  mod.rs  pipeline.rs  read_laz.rs  retile_laz.rs
src/map_gen/common/: compute_basemap.rs  compute_cliffs.rs  compute_contours.rs  (+6 more)
src/matrix/: matrix32x6.rs  matrix3x3.rs  matrix6x6.rs  mod.rs  vector6.rs
src/omap/: area_object.rs  color.rs  colors_and_symbols_omap.txt  line_object.rs  map_object.rs  mod.rs  object.rs  omap.rs  point_object.rs  symbol.rs  tag.rs
src/project/: mod.rs  polygon.rs  rectangles.rs
src/raster/: dfm.rs  fieldtype.rs  geotiff.rs  mod.rs
src/steps/: compute_basemap.rs  compute_cliffs.rs  compute_dfm.rs  compute_map_objects.rs  compute_vegetation.rs  map_laz.rs  mod.rs  prepare_laz.rs  read_laz.rs  retile_laz.rs  save_tiffs.rs
src/tile_gen/: compute_cliffs.rs  compute_contours.rs  compute_dfm.rs  compute_vegetation.rs  initialize_map_tile.rs  map_laz.rs  mod.rs  regenerate_map_tile.rs
(+14 files in other folders)
