[package]
name = "omap_maker"
version = "0.1.0"
edition = "2021"
authors = ["Øyvind Hjermstad"]
description = "An application for generating orienteering maps from lidar data"
repository = "https://github.com/yvind/omapmaker"

[[bin]]
name = "OmapMaker"
path = "src/main.rs"

[dependencies]
# gui
eframe = "0.32"
egui_autocomplete = { git = "https://github.com/yvind/egui_autocomplete" }
egui_double_slider = "0.9.0"
# choose files
rfd = "0.15.1"
# slippy map tiles
walkers = { git = "https://github.com/yvind/walkers" }
# projections
crs-definitions = { version = "0.3.0", features = ["wkt"] }
proj4rs = { version = "0.1.5", features = ["crs-definitions"] }

# for kd-tree
kiddo = "5.0.3"
# randomness for kd-tree stability
fastrand = "2.1.1"

# delaunay and interpolation
spade = "2.14.0"

# geometry
geo = "0.30.0"
linestring2bezier = "0.2.1"

# read/write las/laz/copc
las = { version = "0.9.3", features = ["laz"] }
las-crs = "0.1.1"
copc-rs = "0.5.0"

# omap-writing
omap = { version = "0.3.0", features = ["merge_lines"] }

# better error enums
thiserror = "2.0.8"

# logging warnings and non-panic errors
log = "0.4.27"
