[package]
name = "omap_maker"
version = "0.1.0"
edition = "2024"
authors = ["Øyvind Hjermstad"]
description = "An application for generating orienteering maps from lidar data"
repository = "https://github.com/yvind/omapmaker"

[[bin]]
name = "OmapMaker"
path = "src/main.rs"

[dependencies]
# gui
eframe = "0.35"
egui_autocomplete = { git = "https://github.com/yvind/egui_autocomplete" }
egui_double_slider = "3.0.0"

# choose files
rfd = "0.17.2"

# slippy map tiles
walkers = { git = "https://github.com/yvind/walkers" }

# projections
proj-wkt = "0.8.0"
proj-core = "0.8.0"

# delaunay and interpolation
spade = "2.15.1"

# easy parallelization
rayon = "1.12.0"

# geometry
geo = "0.33.1"
linestring2bezier = "0.5.2"
rstar = "0.13.0"

# read/write las/laz/copc
las = { version = "0.9", features = ["laz-parallel"] }
copc_converter = "0.11.0"
copc-rs = { git = "https://github.com/pka/copc-rs" }

# write omap files
omap = { version = "0.8.0", features = ["geo_ref"] }

# better errors
thiserror = "2"
anyhow = "1"

# logging warnings and non-panic errors
log = "0.4"
geotiff-writer = "0.7.0"
ndarray = "0.17.2"
